// Vitest Snapshot v1

exports[`Swiper > Swiper baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper"
>
  <t-swiper
    duration="300"
    interval="2000"
  >
    <t-swiper-item>
      <div
        class="demo-item"
      >
        1
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        2
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        3
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        4
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        5
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        6
      </div>
    </t-swiper-item>
  </t-swiper>
</div>
`;

exports[`Swiper > Swiper cardVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper"
>
  <t-swiper
    height="280"
    type="card"
  >
    <t-swiper-item>
      <div
        class="demo-item"
      >
        1
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        2
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        3
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        4
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        5
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        6
      </div>
    </t-swiper-item>
  </t-swiper>
</div>
`;

exports[`Swiper > Swiper currentVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper"
>
  <t-swiper
    current="0"
    navigation="[object Object]"
  >
    <t-swiper-item>
      <div
        class="demo-item"
      >
        1
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        2
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        3
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        4
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        5
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        6
      </div>
    </t-swiper-item>
  </t-swiper>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      size="small"
    >
       跳转到第 2 项 
    </t-button>
  </div>
</div>
`;

exports[`Swiper > Swiper fadeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper"
>
  <t-swiper
    animation="fade"
    height="280"
  >
    <t-swiper-item>
      <div
        class="demo-item"
      >
        1
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        2
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        3
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        4
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        5
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        6
      </div>
    </t-swiper-item>
  </t-swiper>
</div>
`;

exports[`Swiper > Swiper fractionVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper"
>
  <t-swiper
    navigation="[object Object]"
  >
    <t-swiper-item>
      <div
        class="demo-item"
      >
        1
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        2
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        3
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        4
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        5
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        6
      </div>
    </t-swiper-item>
  </t-swiper>
</div>
`;

exports[`Swiper > Swiper placementVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper"
>
  <t-swiper
    navigation="[object Object]"
  >
    <t-swiper-item>
      <div
        class="demo-item"
      >
        1
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        2
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        3
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        4
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        5
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        6
      </div>
    </t-swiper-item>
  </t-swiper>
</div>
`;

exports[`Swiper > Swiper sizeVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block--swiper"
    style="width: 1000px;"
  >
    <h3>
      large
    </h3>
    <t-swiper
      navigation="[object Object]"
    >
      <t-swiper-item>
        <div
          class="demo-item demo-large"
        >
          1
        </div>
      </t-swiper-item>
      <t-swiper-item>
        <div
          class="demo-item demo-large"
        >
          2
        </div>
      </t-swiper-item>
      <t-swiper-item>
        <div
          class="demo-item demo-large"
        >
          3
        </div>
      </t-swiper-item>
      <t-swiper-item>
        <div
          class="demo-item demo-large"
        >
          4
        </div>
      </t-swiper-item>
      <t-swiper-item>
        <div
          class="demo-item demo-large"
        >
          5
        </div>
      </t-swiper-item>
      <t-swiper-item>
        <div
          class="demo-item demo-large"
        >
          6
        </div>
      </t-swiper-item>
    </t-swiper>
  </div>
  <div
    class="tdesign-demo-block--swiper"
    style="width: 500px; margin-top: 20px;"
  >
    <h3>
      small
    </h3>
    <t-swiper
      navigation="[object Object]"
    >
      <t-swiper-item>
        <div
          class="demo-item demo-small"
        >
          1
        </div>
      </t-swiper-item>
      <t-swiper-item>
        <div
          class="demo-item demo-small"
        >
          2
        </div>
      </t-swiper-item>
      <t-swiper-item>
        <div
          class="demo-item demo-small"
        >
          3
        </div>
      </t-swiper-item>
      <t-swiper-item>
        <div
          class="demo-item demo-small"
        >
          4
        </div>
      </t-swiper-item>
      <t-swiper-item>
        <div
          class="demo-item demo-small"
        >
          5
        </div>
      </t-swiper-item>
      <t-swiper-item>
        <div
          class="demo-item demo-small"
        >
          6
        </div>
      </t-swiper-item>
    </t-swiper>
  </div>
</div>
`;

exports[`Swiper > Swiper verticalVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper"
>
  <t-swiper
    direction="vertical"
    height="280"
    navigation="[object Object]"
  >
    <t-swiper-item>
      <div
        class="demo-item"
      >
        1
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        2
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        3
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        4
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        5
      </div>
    </t-swiper-item>
    <t-swiper-item>
      <div
        class="demo-item"
      >
        6
      </div>
    </t-swiper-item>
  </t-swiper>
</div>
`;
